<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8f5e9"
    tools:context=".HomeActivity"
    tools:ignore="ExtraText">

    <!-- Title -->
    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/home_screen"
        android:textColor="#4A5D23"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_bmi_calculator"
        android:layout_width="164dp"
        android:layout_height="187dp"
        android:layout_margin="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/i1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_help_suggestions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="156dp"
        android:layout_height="167dp"
        android:layout_margin="16dp"
        android:layout_marginStart="239dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/i3"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/image_help_suggestions"
        android:layout_width="168dp"
        android:layout_height="167dp"
        android:contentDescription="@string/help_suggestions"
        android:src="@drawable/i2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/image_bmi_calculator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:text="@string/bmi_calculator"
        android:textAlignment="center"
        android:textColor="#4A5D23"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_bmi_calculator" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/Products"
        android:textAlignment="center"
        android:textColor="#4A5D23"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_product" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:text="@string/home_remedies"
        android:textAlignment="center"
        android:textColor="#4A5D23"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/image_help_suggestions"
        app:layout_constraintVertical_bias="0.025" />

    <!-- Square Button at the Bottom -->
    <Button
        android:id="@+id/logout_button"
        android:layout_width="429dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:background="#4A5D23"
        android:text="@string/log_out1"
        android:textColor="#000000"
        android:textColorLink="#711818"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.987"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>
