<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D09C"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/inapp_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="#526819"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/register_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="379dp"
        android:layout_height="61dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/hint_username"
        android:padding="18dp"
        android:textColor="#526819"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="377dp"
        android:layout_height="66dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/full_name"
        android:padding="18dp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="378dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <Button
        android:id="@+id/register_btn2"
        android:layout_width="420dp"
        android:layout_height="85dp"
        android:layout_marginBottom="0pt"
        android:backgroundTint="#4A5D23"
        android:text="@string/register"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
